<resources>
    <string name="app_name">Assignment_05</string>
    <string name="img">img</string>
    <string name="hint">User Name</string>
    <string name="user_name">User Name</string>
    <string name="pass">Password</string>
    <string name="Button_login">Login | පිවිසීම</string>
    <string name="button_signup">Signup | ලියාපදිංචි වීම</string>
    <string name="login_success">Login Success</string>
    <string name="textview">Login Success</string>
    <string name="sign_up">Sign Up</string>
    <string name="re_enter_password">Confirm Password</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="todo">TODO</string>
    <string name="latest_posts">LATEST POSTS</string>
    <string name="problems">PROBLEMS</string>
    <string name="news_events">NEWS AND EVENTS</string>
    <string name="donations">DONATIONS</string>
    <string name="success_stories">SUCCESS STORIES</string>
    <string name="find_loc">FIND LOCATIONS</string>
    <string name="abt_us">ABOUT US</string>
    <string name="contact_us">CONTACT US</string>
    <string name="abtus">About Us</string>
    <string name="cntus">Contact Us</string>
    <string name="donat">Donations</string>
    <string name="findloca">Find Location</string>
    <string name="latestpst">Latest Posts</string>
    <string name="newsneven">News and Events</string>
    <string name="prob">Problems</string>
    <string name="succ">Success Stories</string>
</resources>
