<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:srcCompat="@drawable/header"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/latest_posts"
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latest_posts" />

    <Button
        android:id="@+id/problems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/latest_posts"
        android:text="@string/problems" />

    <Button
        android:id="@+id/newsandevnts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/problems"
        android:text="@string/news_events" />

    <Button
        android:id="@+id/doations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newsandevnts"
        android:text="@string/donations" />

    <Button
        android:id="@+id/succsess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/doations"
        android:text="@string/success_stories" />

    <Button
        android:id="@+id/find_loc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/succsess"
        android:text="@string/find_loc" />

    <Button
        android:id="@+id/abt_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/find_loc"
        android:text="@string/abt_us" />

    <Button
        android:id="@+id/cnt_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/abt_us"
        android:text="@string/contact_us" />


</RelativeLayout>